Feature: Implemented sorter on m Table adding as a Dialog and created respective functions to load the fragment on current view and handlers to modify the table binding when sorting

--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -5,8 +5,12 @@
 >
     <Page id="page" title="{i18n>title}">
         <VBox 
-            
+            class="sapUiLargePadding"
         >
+            <c:Fragment
+                type="XML"
+                fragmentName="com.bootcamp.sapui5.finaltest.view.fragments.FilterHeader"
+            ></c:Fragment>
             <c:Fragment
                 type="XML"
                 fragmentName="com.bootcamp.sapui5.finaltest.view.fragments.SuppliersTable"
@@ -14,3 +18,4 @@
         </VBox>
     </Page>
 </mvc:View>
+
