--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,1 +1,8 @@
 /* Enter your custom styles here */
+
+.sapMListHdrText{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
