Refactor: Created SupplierInfoForm and SupplierPrductTable fragments to improve project structure and modularization

--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -1,9 +1,8 @@
 <mvc:View xmlns:layout="sap.ui.layout" controllerName="com.bootcamp.sapui5.finaltest.controller.Detail"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
-	xmlns:f="sap.ui.layout.form"
-	xmlns:core="sap.ui.core"
-    xmlns:smartTable="sap.ui.comp.smarttable">
+	xmlns:c="sap.ui.core"
+>
     <Page  
         id="pageDetail" 
         title="{i18n>titleDetail}"
@@ -12,158 +11,17 @@
 		class="sapUiResponsiveContentPadding"
     >
         <VBox id="dhb_01">
-            <f:SimpleForm id="SimpleFormDisplay354"
-                editable="true"
-                layout="ResponsiveGridLayout"
-                title="{i18n>Information}"
-                labelSpanXL="3" labelSpanL="3"
-                labelSpanM="3" labelSpanS="12"
-                adjustLabelSpan="false" emptySpanXL="4"
-                emptySpanL="4" emptySpanM="4" emptySpanS="0"
-                columnsXL="1" columnsL="1" columnsM="1"
-                singleContainerFullSize="false" >
-                <f:content>
-                    <Label id="ld_01" text="{i18n>supplierId}" />
-                    <Text id="nameText" text="{SupplierID}" />
+            <c:Fragment
+                fragmentName="com.bootcamp.sapui5.finaltest.view.fragments.SupplierInfoForm"
+                type="XML"
+            >
+            </c:Fragment>
+            <c:Fragment
+                fragmentName="com.bootcamp.sapui5.finaltest.view.fragments.SupplierProductsTable"
+                type="XML"
+            >
+            </c:Fragment>
 
-                    <Label id="ld_02" text="{i18n>companyName}" />
-                    <Text id="td_01" text="{Street} {CompanyName}" />
-
-                    <Label id="ld_03" text="{i18n>contactName}" />
-                    <Text id="td_02" text="{ContactName}" />
-
-                    <Label id="ld_04" text="{i18n>contactTitle}" />
-                    <Text id="countryText" text="{ContactTitle}" />
-
-                    <Label text="{i18n>address}" />
-                    <Text text="{Address}" />
-
-                    <Label text="{i18n>Country}" />
-                    <Text text="{Country}" />
-
-                    <Label text="{i18n>city}" />
-                    <Text text="{City}" />
-
-                    <Label text="{i18n>Region}" />
-                    <Text text="{Region}" />
-
-                    <Label text="{i18n>Phone}" />
-                    <Text text="{Phone}" />
-                </f:content>
-            </f:SimpleForm>
-            <layout:VerticalLayout >          
-                <Table
-                    id="SUPPLIER_PRODUCTS_TABLE"
-                    headerText="{i18n>Products Table}"
-                    items="{
-                        path: 'SuppliersDataStore>/filteredProductsByProvider'
-                    }"
-                >
-                    <headerToolbar>
-                        <OverflowToolbar>
-                            <Title text="Products" level="H2"/>
-                            <ToolbarSpacer/>
-                            <FlexBox alignItems="Center" gap="10px" justifyContent="End" width="50%">
-                                <Text
-                                    text="Add a new Product"
-                                /> 
-                                <Button
-                                    icon="sap-icon://create-form"
-                                    press="showCreateProductDialog"
-                                /> 
-                            </FlexBox>
-                        </OverflowToolbar>
-                    </headerToolbar>
-                    <columns>
-                        <Column  hAlign="Center" width="100px">
-                            <Text text="{i18n>productId}" />
-                        </Column>
-                        <Column  hAlign="Center" width="100px">
-                            <Text text="{i18n>productName}" />
-                        </Column>
-                        <Column  hAlign="Center" width="100px">
-                            <Text text="{i18n>productUnitPrice}" />
-                        </Column>
-                        <Column  hAlign="Center" width="100px">
-                            <Text text="{i18n>category}" />
-                        </Column>
-                        <Column  hAlign="Center" width="100px">
-                            <Text text="{i18n>moreInfo}" />
-                        </Column>
-                        <Column  hAlign="Center" width="100px">
-                            <Text text="{i18n>delete}" />
-                        </Column>
-                    </columns>
-                    <items>
-                        <ColumnListItem type="Active">
-                            <cells>
-                                <FlexBox 
-                                    width="100%"
-                                    alignContent="Center"
-                                    justifyContent="Center"
-                                >
-                                
-                                    <Text
-                                        text="{SuppliersDataStore>ProductID}"
-                                    />
-                                </FlexBox>
-                                <FlexBox 
-                                    width="100%"
-                                    alignContent="Center"
-                                    justifyContent="Center"
-                                >
-                                
-                                    <Text
-                                        text="{SuppliersDataStore>ProductName}"
-                                    />
-                                </FlexBox>
-                                <FlexBox 
-                                    width="100%"
-                                    alignContent="Center"
-                                    justifyContent="Center"
-                                >
-                                
-                                    <Text
-                                        text="{SuppliersDataStore>UnitPrice}"
-                                    />
-                                </FlexBox>
-                                <FlexBox 
-                                    width="100%"
-                                    alignContent="Center"
-                                    justifyContent="Center"
-                                >
-                                
-                                    <Text
-                                        text="{SuppliersDataStore>CategoryID}"
-                                    />
-                                </FlexBox>
-                                <FlexBox 
-                                    width="100%"
-                                    alignContent="Center"
-                                    justifyContent="Center"
-                                >
-                                
-                                    <Button
-                                        icon="sap-icon://display"
-                                        press="onShowDetailsCreation"
-                                    />
-                                </FlexBox>
-                                <FlexBox 
-                                    width="100%"
-                                    alignContent="Center"
-                                    justifyContent="Center"
-                                >
-                                
-                                    <Button
-                                        icon="sap-icon://delete"
-                                        press="delete"
-                                    />
-                                </FlexBox>
-                            </cells>
-                        </ColumnListItem>
-                    </items>
-                </Table>
-            </layout:VerticalLayout>
         </VBox>
     </Page>
 </mvc:View>
